Bug 93968 - Sidebar styles preview is broken for bullet styles
Summary: Sidebar styles preview is broken for bullet styles
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: Other Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: noRepro:Windows:5.0.0+ target:5.4.0.1...
Keywords:
: 94197 98509 (view as bug list)
Depends on:
Blocks: Styles Sidebar-Styles Styles-Preview
  Show dependency treegraph
 
Reported: 2015-09-06 12:42 UTC by Yousuf Philips (jay) (retired)
Modified: 2023-11-22 14:19 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
clip of Character styles master on Windows (95.83 KB, image/png)
2015-09-07 03:02 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-09-06 12:42:28 UTC
Steps:
1) Open Writer
2) Open Styles and Formatting tab in sidebar
3) Switch to character styles
4) Notice that one style has 7 square boxes where letters should be

This relates to work going on in bug 90646.

Version: 5.1.0.0.alpha1+
Build ID: cf9fbdb379e2935677a73ced513d7faf855c299c
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-09-05_00:34:47
Locale: en-US (en_US.UTF-8)
Comment 1 V Stuart Foote 2015-09-06 13:15:33 UTC
@Jay,

Can not confirm on a system with OpenSymbol font installed.

The Characters style preview in the Sidebar deck for "Bullets" is rendered readable.

Is this an issue with installer adding/removing fonts?

Version: 5.1.0.0.alpha1+
Build ID: d417059dae303685de7aa0f4b1c192ffcf5304d5-GL
TinderBox: Win-x86@39, Branch:master, Time: 2015-09-05_09:23:01
Locale: en-US (en_US)
Comment 2 Jean-Baptiste Faure 2015-09-06 18:35:08 UTC
I reproduce the problem with version 5.0.3.0+ built at home under Ubuntu 15.04 x86-64. For bullets character style I see 5 square boxes (bullets = puces in French). Of course OpenSymbol is installed on my computer.

Best regards. JBF
Comment 3 Yousuf Philips (jay) (retired) 2015-09-07 02:01:57 UTC
(In reply to V Stuart Foote from comment #1)
> @Jay,
> 
> Can not confirm on a system with OpenSymbol font installed.

Yes i have the fonts-opensymbol installed on my system from the trusty-updates (Ubuntu 14.04) repo. Could it be that there is a newer version available?

> The Characters style preview in the Sidebar deck for "Bullets" is rendered
> readable.

Got a screenshot?

> Is this an issue with installer adding/removing fonts?

Not likely on linux.
Comment 4 V Stuart Foote 2015-09-07 03:02:01 UTC
Created attachment 118488 [details]
clip of Character styles master on Windows

as requested...
Comment 5 Jean-Baptiste Faure 2015-09-07 03:57:07 UTC
OpenSymbol does not contain alphabetical latin characters. So Bullets is not written with this font on your screen copy. So I guess the problem is a fallback problem.

Best regards. JBF
Comment 6 Maxim Monastirsky 2015-09-19 19:07:37 UTC
*** Bug 94197 has been marked as a duplicate of this bug. ***
Comment 7 Maxim Monastirsky 2016-03-07 22:29:27 UTC
*** Bug 98509 has been marked as a duplicate of this bug. ***
Comment 8 Ricardo Dias Marques 2016-10-01 19:10:19 UTC
I also reproduce this problem of the "Bullets" Character Style name (in the "Styles and Formatting" pane of LibreOffice Writer, which appears when pressing the F11 shortcut key) appearing as 7 "squares" instead of appearing as the word "Bullets".

I'm using LO (LibreOffice) 5.1.4.2 running on Ubuntu MATE 16.04.1 LTS (Xenial Xerus) - 64-bits

I do have the package "fonts-opensymbol" installed (but NOT the package "ming-fonts-opensymbol" installed, in case that's relevant):

$ dpkg -s fonts-opensymbol
Package: fonts-opensymbol
Status: install ok installed
Priority: optional
Section: fonts
Installed-Size: 453
Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
Architecture: all
Multi-Arch: foreign
Source: libreoffice (1:5.1.4-0ubuntu1)
Version: 2:102.7+LibO5.1.4-0ubuntu1
Replaces: ttf-opensymbol
Provides: ttf-opensymbol
Recommends: fontconfig
Description: OpenSymbol TrueType font
 This package contains the OpenSymbol TrueType font included in
 LibreOffice. This font contains symbols (like fonts as Wingdings(tm)),
 bullets (needed for bullets in LibreOffice) and non-latin character
Homepage: http://www.libreoffice.org
Original-Maintainer: Debian LibreOffice Maintainers <debian-openoffice@lists.debian.org>
Comment 9 Khaled Hosny 2017-04-21 12:43:28 UTC
The summary line should be a *summary* not bug description
Comment 10 Commit Notification 2017-06-21 12:13:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=65afee1494ac1f71b39e4b3dc1ced52c5f21de54&h=libreoffice-5-4

tdf#93968 bullet char style preview is unreadable, cause uses opensymbol

It will be available in 5.4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2017-06-21 12:14:28 UTC
fixed in master as well
Comment 12 Yousuf Philips (jay) (retired) 2017-06-23 01:11:52 UTC
Caolan: I'm assuming the fix only fixes this issue for styles using opensymbol, but ideally the fix should provide an easy means to add and remove particular font names that shouldn't be rendered including popular symbol based fonts like Webdings, Wingdings, Wingdings 2, and Wingdings 3.
Comment 13 Caolán McNamara 2017-06-23 10:37:42 UTC
Theres a list of such things and a means to do it already in the font preview code in svtools/source/misc/sampletext.cxx as isSymbolFont. I considered exposing that more generally and using that, but that would take more time that I currently have.
Comment 14 Commit Notification 2017-06-23 20:21:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8e6d7a86adb102ae1bb4df99ef73ebead962105&h=libreoffice-5-3

tdf#93968 bullet char style preview is unreadable, cause uses opensymbol

It will be available in 5.3.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.