tdf#93968 bullet char style preview is unreadable, cause uses opensymbol

Change-Id: I1bd0a0e85c9d956184680d7e15709b3a7b590c30
Reviewed-on: https://gerrit.libreoffice.org/39010
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>